changed add depart template

--- a/main_app/templates/main_app/admin/add_department.html
+++ b/main_app/templates/main_app/admin/add_department.html
@@ -4,6 +4,7 @@ Add Department
 {% endblock page_title %}
 {% block content %}
 
+
 <!-- Main content -->
 <section class="content">
     <div class="container-fluid">
@@ -12,41 +13,24 @@ Add Department
                 <!-- general form elements -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Add New Department</h3>
+                        <h3 class="card-title">Add department</h3>
+                        <div class="form-group col-md-6">
+                            {% if messages %}
+                                {% for message in messages %}
+                                {% if message.tags == 'error' %}
+                                <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
+                                {% endif %}
+                                {% if message.tags == 'success' %}
+                                <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
+                                {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_department_save" method="post">
-                        {% csrf_token %}
-                        <div class="card-body">
-                            <div class="form-group col-md-6">
-                                {% if messages %}
-                                    {% for message in messages %}
-                                    {% if message.tags == 'error' %}
-                                    <div class="alert alert-danger">{{ message }}</div>
-                                    {% endif %}
-                                    {% if message.tags == 'success' %}
-                                    <div class="alert alert-success">{{ message }}</div>
-                                    {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-12">
-                                    <label>Department Name</label>
-                                    <input type="text" class="form-control" name="department_name" placeholder="Enter department name">
-                                </div>   
-                            </div>
-                            <div class="row float-right">
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.card-body -->
-
-                       
-                    </form>
+                    {% url 'add_department_save' as action_path %}
+                    {% include 'main_app/admin/add_department_form.html' with messages=messages form=form action_path=action_path button_text="Save" %}
                 </div>
                 <!-- /.card -->
             </div>
@@ -54,5 +38,5 @@ Add Department
     </div>
 </section>
 <!-- /.content -->
-  {% endblock content %}
+{% endblock content %}
   
