templates validation add

--- a/main_app/templates/main_app/admin/edit_block.html
+++ b/main_app/templates/main_app/admin/edit_block.html
@@ -35,7 +35,7 @@ Edit Block
                                 <div class="form-group col-md-12">
                                     <label>Block Name</label>
                                     <input type="hidden" class="form-control" name="block_id" value="{{ blocks.id }}">
-                                    <input type="text" class="form-control" name="block_name" value="{{ blocks.block_name }}" placeholder="Enter block name">
+                                    <input type="text" class="form-control" name="block_name" value="{{ blocks.block_name }}" placeholder="Enter block name" required>
                                 </div>   
                             </div>
                             <div class="row float-right">
