--- a/main_app/templates/main_app/admin/edit_student.html
+++ b/main_app/templates/main_app/admin/edit_student.html
@@ -36,24 +36,24 @@ Edit Student
 
                                 <div class="form-group col-md-6">
                                     <label>Email address</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{student.admin.email}}">
+                                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{student.admin.email}}" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{student.admin.first_name}}">
+                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{student.admin.first_name}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{student.admin.last_name}}">
+                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{student.admin.last_name}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{student.admin.username}}">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{student.admin.username}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Program</label>
-                                    <input type="text" class="form-control" placeholder="program" name="program" value="{{student.program}}">
+                                    <input type="text" class="form-control" placeholder="program" name="program" value="{{student.program}}" required>
                                 </div> 
                                 <div class="form-group col-md-6">
                                     <label>Gender</label>
