--- a/main_app/templates/main_app/admin/add_block.html
+++ b/main_app/templates/main_app/admin/add_block.html
@@ -34,7 +34,7 @@ Add Block
                             <div class="row">
                                 <div class="form-group col-md-12">
                                     <label>Block Name</label>
-                                    <input type="text" class="form-control" name="block_name" placeholder="Enter block name">
+                                    <input type="text" class="form-control" name="block_name" placeholder="Enter block name" required>
                                 </div>   
                             </div>
                             <div class="row float-right">
