--- a/main_app/templates/main_app/admin/add_course.html
+++ b/main_app/templates/main_app/admin/add_course.html
@@ -34,12 +34,12 @@ Add Course
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Course name</label>
-                                    <input type="text" class="form-control" name="course_name" placeholder="Enter Course name">
+                                    <input type="text" class="form-control" name="course_name" placeholder="Enter Course name" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>Course code</label>
-                                    <input type="text" class="form-control" placeholder="Enter Course code" name="course_code">
+                                    <input type="text" class="form-control" placeholder="Enter Course code" name="course_code" required>
                                 </div>
 
                                 <div class="form-group col-md-6">
