--- a/main_app/templates/main_app/admin/add_office.html
+++ b/main_app/templates/main_app/admin/add_office.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Office No</label>
-                                    <input type="text" class="form-control" name="office_number" placeholder="Enter office number">
+                                    <input type="text" class="form-control" name="office_number" placeholder="Enter office number" required>
                                 </div>   
                             </div>
                             <div class="row float-right">
