--- a/main_app/templates/main_app/admin/add_staff.html
+++ b/main_app/templates/main_app/admin/add_staff.html
@@ -34,29 +34,29 @@ Add Staff
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Email address</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email">
+                                    <input type="email" class="form-control" name="email" placeholder="Enter email" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>Password</label>
-                                    <input type="password" class="form-control" placeholder="Password" name="password">
+                                    <input type="password" class="form-control" placeholder="Password" name="password" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="First Name" name="first_name">
+                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name">
+                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Address</label>
-                                    <input type="text" class="form-control" placeholder="Address" name="address">
+                                    <input type="text" class="form-control" placeholder="Address" name="address" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="office">Office</label>
