--- a/main_app/templates/main_app/admin/add_student.html
+++ b/main_app/templates/main_app/admin/add_student.html
@@ -34,33 +34,33 @@ Add Student
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Student ID</label>
-                                    <input type="text" class="form-control" name="student_id" placeholder="Enter student ID">
+                                    <input type="text" class="form-control" name="student_id" placeholder="Enter student ID" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Email address</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email">
+                                    <input type="email" class="form-control" name="email" placeholder="Enter email" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>Password</label>
-                                    <input type="password" class="form-control" placeholder="Password" name="password">
+                                    <input type="password" class="form-control" placeholder="Password" name="password" required>
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="First Name" name="first_name">
+                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name">
+                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Program</label>
-                                    <input type="text" class="form-control" placeholder="program" name="program">
+                                    <input type="text" class="form-control" placeholder="program" name="program" required>
                                 </div> 
                                 <div class="form-group col-md-6">
                                     <label>Gender</label>
