--- a/main_app/templates/main_app/admin/edit_course.html
+++ b/main_app/templates/main_app/admin/edit_course.html
@@ -34,13 +34,13 @@ Edit Course
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Course name</label>
-                                    <input type="text" class="form-control" name="course_name" value="{{course.course_name}}" placeholder="Enter Course name">
+                                    <input type="text" class="form-control" name="course_name" value="{{course.course_name}}" placeholder="Enter Course name" required>
                                     <input type="hidden" class="form-control" name="course_id" value="{{course.id}}">
                                 </div>
                                 
                                 <div class="form-group col-md-6">
                                     <label>Course code</label>
-                                    <input type="text" class="form-control" placeholder="Enter Course code" name="course_code" value="{{course.course_code}}">
+                                    <input type="text" class="form-control" placeholder="Enter Course code" name="course_code" value="{{course.course_code}}" required>
                                 </div>
 
                                 <div class="form-group col-md-6">
