--- a/main_app/templates/main_app/admin/edit_department.html
+++ b/main_app/templates/main_app/admin/edit_department.html
@@ -34,7 +34,7 @@ Edit Department
                             <div class="row">
                                 <div class="form-group col-md-12">
                                     <label>Department Name</label>
-                                    <input type="text" class="form-control" name="department_name" value="{{department.department_name}}" placeholder="Enter department name">
+                                    <input type="text" class="form-control" name="department_name" value="{{department.department_name}}" placeholder="Enter department name" required>
                                     <input type="hidden"  name="department_id"  value="{{ department.id }}">
                                 </div>   
                             </div>
