--- a/main_app/templates/main_app/admin/edit_staff.html
+++ b/main_app/templates/main_app/admin/edit_staff.html
@@ -34,24 +34,24 @@ Edit Staff
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Email address</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{staff.admin.email}}">
+                                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{staff.admin.email}}" required>
                                     <input type="hidden" class="form-control" name="staff_id" value="{{staff.admin.id}}">
                                 </div>                                
                                 <div class="form-group col-md-6">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{staff.admin.first_name}}">
+                                    <input type="text" class="form-control" placeholder="First Name" name="first_name" value="{{staff.admin.first_name}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{staff.admin.last_name}}">
+                                    <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{staff.admin.last_name}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{staff.admin.username}}">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{staff.admin.username}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Address</label>
-                                    <input type="text" class="form-control" placeholder="Address" name="address" value="{{staff.address}}">
+                                    <input type="text" class="form-control" placeholder="Address" name="address" value="{{staff.address}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Department</label>
