updated add and view buttons in html

--- a/main_app/templates/main_app/admin/add_block.html
+++ b/main_app/templates/main_app/admin/add_block.html
@@ -13,6 +13,7 @@ Add Block
                 <div class="card card-primary">
                     <div class="card-header">
                         <h3 class="card-title">Add New Block</h3>
+                        <a href="{% url 'view_blocks' %}" class="btn btn-info" style="float: right;"><i class="fa fa-list">View blocks</i></a>
                         <div class="form-group col-md-6">
                             {% if messages %}
                                 {% for message in messages %}
