--- a/main_app/templates/main_app/admin/add_student.html
+++ b/main_app/templates/main_app/admin/add_student.html
@@ -13,6 +13,7 @@ Add Student
                 <div class="card card-primary">
                     <div class="card-header">
                         <h3 class="card-title">Add New Student</h3>
+                        <a href="{% url 'view_student' %}" class="btn btn-info" style="float: right;"><i class="fa fa-list">View students</i></a>
                         <div class="form-group col-md-6">
                             {% if messages %}
                                 {% for message in messages %}
