--- a/main_app/templates/main_app/admin/edit_staff.html
+++ b/main_app/templates/main_app/admin/edit_staff.html
@@ -34,7 +34,8 @@ Edit Staff
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <label>Email address</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email" value="{{staff.admin.email}}" required>
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" value="{{staff.admin.email}}" required>
+                                    <span class="error" id="invalid_email"></span>
                                     <input type="hidden" class="form-control" name="staff_id" value="{{staff.admin.id}}">
                                 </div>                                
                                 <div class="form-group col-md-6">
@@ -78,4 +79,20 @@ Edit Staff
 </section>
 <!-- /.content -->
   {% endblock content %}
+  <script>
+    $(document).ready(function(){
+        $("#email").keyup(function(){
+            var email = $("#email").val();
+            var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+            if (!filter.test(email)) {
+            $("#invalid_email").text(email+" is not a valid email").css("color","red");
+            email.focus;
+            } else {
+                $("#invalid_email").text("");
+            }
+        });
+    });
+
+  </script>
+  {% endblock custom_js %}
   
