--- a/main_app/templates/main_app/admin/home_content.html
+++ b/main_app/templates/main_app/admin/home_content.html
@@ -1,6 +1,6 @@
 {% extends 'main_app/admin/base.html' %} 
 {% block page_title %}
-Home
+Dashboard
 {% endblock page_title %}
 {% block content %}
 
