--- a/main_app/templates/main_app/admin/add_student.html
+++ b/main_app/templates/main_app/admin/add_student.html
@@ -61,6 +61,13 @@ Add Student
                                     <input type="text" class="form-control" placeholder="Username" name="username" autocomplete="off" required>
                                 </div>
                                 <div class="form-group col-md-6">
+                                    <label>Level</label>
+                                    <select class="form-control" name="level">
+                                        <option value="Undergraduate">Undergraduate</option>
+                                        <option value="Postgraduate">Postgraduate</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-6">
                                     <label>Program</label>
                                     <input type="text" class="form-control" placeholder="program" name="program" required>
                                 </div> 
