--- a/main_app/templates/main_app/admin/add_student.html
+++ b/main_app/templates/main_app/admin/add_student.html
@@ -57,11 +57,7 @@ Add Student
                                     <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" autocomplete="off" required>
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Level</label>
+                                    <label>Education level</label>
                                     <select class="form-control" name="level">
                                         <option value="Undergraduate">Undergraduate</option>
                                         <option value="Postgraduate">Postgraduate</option>
