--- a/main_app/templates/main_app/admin/edit_student.html
+++ b/main_app/templates/main_app/admin/edit_student.html
@@ -13,6 +13,7 @@ Edit Student
                 <div class="card card-primary">
                     <div class="card-header">
                         <h3 class="card-title">Edit Student</h3>
+                        <a href="{% url 'view_student' %}" class="btn btn-info" style="float: right;"><i class="fa fa-list">View student</i></a>
                         <div class="form-group col-md-6">
                             {% if messages %}
                                 {% for message in messages %}
@@ -47,10 +48,6 @@ Edit Student
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
                                     <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{student.admin.last_name}}" required>
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{student.admin.username}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Level</label>
