--- a/main_app/templates/main_app/admin/view_students.html
+++ b/main_app/templates/main_app/admin/view_students.html
@@ -23,10 +23,10 @@ Students
                         <th>Student ID</th>
                         <th>First Name</th>
                         <th>Last Name</th>
-                        <th>User Name</th>
                         <th>Email</th>
                         <th>Gender</th>
                         <th>Program</th>
+                        <th>Education level</th>
                         <th>Action</th>
                     </tr>
                     </thead>
@@ -37,10 +37,10 @@ Students
                         <td>{{ student.student_id }}</td>
                         <td>{{ student.admin.first_name }}</td>
                         <td>{{ student.admin.last_name }}</td>
-                        <td>{{ student.admin.username }}</td>
                         <td>{{ student.admin.email }}</td>
                         <td>{{ student.gender }}</td>
                         <td>{{ student.program }}</td>
+                        <td>{{ student.level }}</td>
                         <td><a href="/edit_student/{{ student.admin.id }}" class="btn btn-success">Edit</a></td>
                     </tr>
                     {% endfor %}
