--- a/main_app/templates/main_app/admin/view_courses.html
+++ b/main_app/templates/main_app/admin/view_courses.html
@@ -14,6 +14,7 @@ Courses
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Course Details</h3>
+              <a href="{% url 'add_course' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add course</i></a>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
