--- a/main_app/templates/main_app/admin/view_departments.html
+++ b/main_app/templates/main_app/admin/view_departments.html
@@ -14,6 +14,7 @@ Departments
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Department Details</h3>
+              <a href="{% url 'add_department' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add department</i></a>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
