--- a/main_app/templates/main_app/admin/view_offices.html
+++ b/main_app/templates/main_app/admin/view_offices.html
@@ -14,7 +14,7 @@ Offices
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Office Details</h3>
-              <a href="{% url 'add_office' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus">Add office</i></a>
+              <a href="{% url 'add_office' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add office</i></a>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
