--- a/main_app/templates/main_app/admin/view_staffs.html
+++ b/main_app/templates/main_app/admin/view_staffs.html
@@ -14,6 +14,7 @@ Staffs
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Staff Details</h3>
+              <a href="{% url 'add_staff' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add staff</i></a>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
