--- a/main_app/templates/main_app/admin/add_department.html
+++ b/main_app/templates/main_app/admin/add_department.html
@@ -14,6 +14,7 @@ Add Department
                 <div class="card card-primary">
                     <div class="card-header">
                         <h3 class="card-title">Add department</h3>
+                        <a href="{% url 'view_departments' %}" class="btn btn-info" style="float: right;"><i class="fa fa-list">View departments</i></a>
                         <div class="form-group col-md-6">
                             {% if messages %}
                                 {% for message in messages %}
