--- a/main_app/templates/main_app/admin/view_blocks.html
+++ b/main_app/templates/main_app/admin/view_blocks.html
@@ -14,7 +14,7 @@ Blocks
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Blocks Details</h3>
-              <a href="{% url 'add_block' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus">Add block</i></a>
+              <a href="{% url 'add_block' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add block</i></a>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
