--- a/main_app/templates/main_app/admin/view_students.html
+++ b/main_app/templates/main_app/admin/view_students.html
@@ -12,7 +12,7 @@ Students
             <div class="card card-default">
                 <div class="card-header">
                 <h3 class="card-title"></h3>
-                    <a href="{% url 'add_student' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus">Add student</i></a>
+                    <a href="{% url 'add_student' %}" class="btn btn-info" style="float: right;"><i class="fa fa-plus-circle">Add student</i></a>
                 </div><br>
                 <!-- /.card-header -->
                 <div class="card-body table-responsive">
