--- a/main_app/templates/main_app/admin/edit_staff.html
+++ b/main_app/templates/main_app/admin/edit_staff.html
@@ -47,12 +47,16 @@ Edit Staff
                                     <input type="text" class="form-control" placeholder="Last Name" name="last_name" value="{{staff.admin.last_name}}" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" value="{{staff.admin.username}}" required>
-                                </div>
-                                <div class="form-group col-md-6">
                                     <label>Address</label>
                                     <input type="text" class="form-control" placeholder="Address" name="address" value="{{staff.address}}" required>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="office">Office</label>
+                                    <select name="office_id" id="office_id" class="form-control">
+                                        {% for office in offices %}
+                                        <option value="{{office.id}}"{% if office.id == staff.office_id  %} selected {% endif %}>{{office.block.block_name}}/{{office.office_number}}</option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Department</label>
@@ -79,6 +83,7 @@ Edit Staff
 </section>
 <!-- /.content -->
   {% endblock content %}
+  {% block custom_js %}
   <script>
     $(document).ready(function(){
         $("#email").keyup(function(){
