added notification model for staff and students

--- a/main_app/templates/main_app/staffs/all_booking.html
+++ b/main_app/templates/main_app/staffs/all_booking.html
@@ -19,6 +19,7 @@ Home
                     <tr>
                       <th>ID</th>
                       <th>Student</th>
+                      <th>Appointment Reason</th>
                       <th>Appointment Date</th>
                       <th>Time Slot</th>
                       <th>Action</th>
@@ -29,6 +30,7 @@ Home
                     <tr>
                       <td>{{appointment.id}}</td>
                       <td>{{appointment.student.first_name}} {{appointment.student.last_name}}</td>
+                      <td>{{appointment.reason}}</td>
                       <td>{{appointment.appointment_date}}</td>
                       <td>{{appointment.appointment_time}}</td>                     
                       <td>
