--- a/main_app/templates/main_app/students/base.html
+++ b/main_app/templates/main_app/students/base.html
@@ -47,6 +47,11 @@
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item">
+        <a class="nav-link" href="">
+          <i class="far fa-bell"></i>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">
           Logout
         </a>
