--- a/main_app/templates/main_app/admin/edit_staff.html
+++ b/main_app/templates/main_app/admin/edit_staff.html
@@ -79,6 +79,7 @@ Edit Staff
 </section>
 <!-- /.content -->
   {% endblock content %}
+  {% block custom_js %}
   <script>
     $(document).ready(function(){
         $("#email").keyup(function(){
