solved some bugs

--- a/main_app/templates/main_app/admin/edit_staff.html
+++ b/main_app/templates/main_app/admin/edit_staff.html
@@ -28,7 +28,7 @@ Edit Staff
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/edit_staff_save" method="post">
+                    <form role="form" action="/edit_staff_save" method="post" autocomplete="off">
                         {% csrf_token %}
                         <div class="card-body">
                             <div class="row">
