--- a/main_app/templates/main_app/students/notifications.html
+++ b/main_app/templates/main_app/students/notifications.html
@@ -1,4 +1,4 @@
-{% load static %} 
+<!-- {% load static %}  -->
 <ul class="navbar-nav ml-auto">
     <!-- Notifications Dropdown Menu -->
     <li class="nav-item dropdown">
