--- a/main_app/templates/main_app/admin/add_staff.html
+++ b/main_app/templates/main_app/admin/add_staff.html
@@ -29,7 +29,7 @@ Add Staff
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_staff_save" method="post">
+                    <form role="form" action="/add_staff_save" method="post" autocomplete="off">
                         {% csrf_token %}
                         <div class="card-body">
                             <div class="row">
@@ -51,10 +51,6 @@ Add Staff
                                 <div class="form-group col-md-6">
                                     <label>Last Name</label>
                                     <input type="text" class="form-control" placeholder="Last Name" name="last_name" required>
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Username</label>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" autocomplete="off" required>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Address</label>
