notification setup to students

--- a/main_app/templates/main_app/students/lectures.html
+++ b/main_app/templates/main_app/students/lectures.html
@@ -11,7 +11,7 @@ Staffs
         <div class="col-12">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Available Lectures</h3>
+              <h3 class="card-title">Available Lectures {{count_notifications}}</h3>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
