--- a/main_app/templates/main_app/staffs/base.html
+++ b/main_app/templates/main_app/staffs/base.html
@@ -45,6 +45,9 @@
     <h4 style="margin-left: 10px;margin-top: 5px;">CMS | Lectures Panel</h4>
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
+      {% block notification %}
+      {% include 'main_app/staffs/staff_notification.html' with user=user id=id %}
+      {% endblock notification %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">
           Logout
