--- a/main_app/templates/main_app/staffs/all_booking.html
+++ b/main_app/templates/main_app/staffs/all_booking.html
@@ -35,12 +35,12 @@ Home
                       <td>{{appointment.appointment_time}}</td>                     
                       <td>
                         {% if appointment.status == 0 %}
-                        <a href="{% url 'approve_appointment' appointment_id=appointment.id %}" class="btn btn-success btn-sm">Approve</i></a>
-                        <a href="{% url 'reject_appointment' appointment_id=appointment.id %}" class="btn btn-danger btn-sm">Reject</i></a>
+                        <a href="{% url 'approve_appointment' appointment_id=appointment.id %}" class="btn btn-info btn-sm">Approve</i></a>
+                        <a href="{% url 'reject_appointment' appointment_id=appointment.id %}" class="btn btn-warning btn-sm">Reject</i></a>
                         {% elif appointment.status == 1 %}
                         <a href="" class="btn btn-success btn-sm">Accepted</i></a>
                         {% elif appointment.status == 2 %}
-                        <a href="" class="btn btn-warning btn-sm">Rejected</i></a>
+                        <a href="" class="btn btn-danger btn-sm">Rejected</i></a>
                         {% else %}
                         <a href="{% url 'reject_appointment' appointment_id=appointment.id %}" class="btn btn-danger btn-sm"><i class="fa fa-window-close"></i></a>
                         {% endif %}
