--- a/main_app/templates/main_app/login.html
+++ b/main_app/templates/main_app/login.html
@@ -72,7 +72,7 @@
         </div>
       </form>
       <p class="mb-1">
-        <a href="forgot-password.html">I forgot my password</a>
+        <a href="{% url 'reset_password' %}">I forgot my password</a>
       </p>
     </div>
     <!-- /.login-card-body -->
