designed welcome page

--- a/main_app/templates/main_app/staffs/form_template.html
+++ b/main_app/templates/main_app/staffs/form_template.html
@@ -14,6 +14,6 @@
   <!-- /.card-body -->
 
   <div class="card-footer">
-    <button type="submit" class="btn btn-primary btn-block">{{ button_text }}</button>
+    <button type="submit" id="Save" class="btn btn-primary btn-block">{{ button_text }}</button>
   </div>
 </form>
