--- a/main_app/templates/main_app/welcome.html
+++ b/main_app/templates/main_app/welcome.html
@@ -35,7 +35,34 @@
     </nav>
 
     <div class="container">
-        <br> {% block content %} {% endblock content %}
+        <section style="background-image:url(assets/dist/img/product-background-light.png);background-position: 100% 100%;background-repeat: no-repeat;background-size: cover;padding-top:30px;">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="margin-top:20px;" align="center">
+                    <img src="assets/dist/img/1.png" alt="" class="img-responsive" style="width:70%;">
+                </div>
+                <div class="col-xs-12 col-sm-6">
+					<h1 style="font-family: 'DM Sans', sans-serif;font-size:50pt;letter-spacing:0.02em;line-height:1.1;color:#645d6b">Consultation<br>Management<br>System</h1>
+					<h3 style="line-height:1.5;padding-right:40px;">A Consultation Management System is a software application designed to streamline process of scheduling,and tracking consultations or appointments between staffs (such as lectures, assistant lectures, tutorial assistants, etc.) and their students. It facilitates effective communication, appointment booking, and record-keeping for consultations.</b></h3><br>
+					<a class="btn" href="/login" style="width:50%;background:#99b0e0;border-color:#99b0e0;color:#000;">LOGIN</a>
+				</div>
+						
+            </div><br>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12">
+					<marquee direction="left" style="padding:20px 0;">
+                        <span style="font-weight: bolder; font-size: 25px; color: #801419">
+                            LOGIN NOW !&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            
+                        </span>
+                        </marquee>
+				</div>
+			</div>
+		</section>		
+    </div>
+     
+	<div style="background-color:#cfcfcf;padding:30px 0;">
+		<div class="container">
+		</div>
     </div>
 
 
