finalized reset password

--- a/main_app/templates/main_app/users/password_reset_complete.html
+++ b/main_app/templates/main_app/users/password_reset_complete.html
@@ -26,37 +26,10 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Enter email to reset your password</p>
-      {% if messages %}
-      <div class="col-12">
-        {% for message in messages %}
-        {% if message.tags == 'error' %}
-        <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
-        {% endif %}
-        {% endfor %}
-      </div>
-      {% endif%}
-
-      <form method="post" class="card">
-        {% csrf_token %}
-        
-        {% for field in form %}
-                  {{ field.label_tag }} 
-                  {{ field }}
-                  {% if field.errors %}
-                      <small>{{ field.errors|striptags  }}</small> 
-                  {% endif %}
-          {% endfor %}
-        
-        
-        <div>
-            <br>
-            <div class="form-group ml-1">
-                <button type="submit" class="btn btn-primary">Reset Password</button>
-            </div>
-          
-        </div>
-      </form>
+        <h2>Reset Password</h2>
+      <p class="login-box-msg">
+        Your password has been changed successfully. Please <a href="{% url 'login' %}">Login</a>
+      </p>
       
     </div>
     <!-- /.login-card-body -->
