added profile picture upload

--- a/main_app/templates/main_app/staffs/staff_sidebar.html
+++ b/main_app/templates/main_app/staffs/staff_sidebar.html
@@ -12,7 +12,12 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
+          {% if user.profile_pic %}
           <img src="{{ user.profile_pic.url }}" class="img-circle elevation-2" alt="User Image">
+          {% else %}
+          <img src="" class="img-circle elevation-2" alt="User Image">
+          {% endif %}
+          
         </div>
         <div class="info">
           <a href="{% url 'staff_profile' %}" class="d-block">{{ user.username }}</a>
