--- a/main_app/templates/main_app/staffs/staff_profile.html
+++ b/main_app/templates/main_app/staffs/staff_profile.html
@@ -27,9 +27,13 @@ Edit Profile
               </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="{% url 'staff_profile_save' %}" method="post">
+            <form role="form" action="{% url 'staff_profile_save' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
               <div class="card-body">
+                <div class="form-group">
+                  <label>Profile Pic</label>
+                  <input type="file" class="form-control" name="profile_pic">
+                </div>
                 <div class="form-group">
                   <label>Username</label>
                   <input type="text" class="form-control" name="username" value="{{ user.username }}" disabled="disabled">
