added schedule view for staffs

--- a/main_app/templates/main_app/staffs/staff_sidebar.html
+++ b/main_app/templates/main_app/staffs/staff_sidebar.html
@@ -57,7 +57,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/view_slots" class="nav-link">
+                <a href="{% url 'view_shedule' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     View slots
