atached student name to staff notification

--- a/main_app/templates/main_app/staffs/staff_sidebar.html
+++ b/main_app/templates/main_app/staffs/staff_sidebar.html
@@ -42,7 +42,7 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-edit"></i>
               <p>
-                Manage Slots
+                Manage Shedules
                 <i class="fas fa-angle-left right"></i>
               </p>
             </a>
@@ -52,7 +52,7 @@
                 <a href="{% url 'create_schedule' %}" class="nav-link {% if request.path == create_schedule %} active {% endif %}">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
-                    Add slots
+                    Add Shedule
                   </p>
                 </a>
               </li>
@@ -60,7 +60,7 @@
                 <a href="{% url 'view_shedule' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
-                    View slots
+                    View Shedules
                   </p>
                 </a>
               </li>
