--- a/main_app/templates/main_app/staffs/staff_notification.html
+++ b/main_app/templates/main_app/staffs/staff_notification.html
@@ -10,7 +10,7 @@
         <span class="dropdown-item dropdown-header">{{ count_notifications }} Notifications</span>
         <div class="dropdown-divider"></div>
         {% for notification in notifications %}
-        <a href="#" class="dropdown-item">
+        <a href="/view_notification/{{notification.id}}" class="dropdown-item">
         <i class="fas fa-check mr-2"></i> {{notification.message}}
           <span class="float-right text-muted text-sm">{{notification.created_at}}</span>
           {% endfor %}
