added route for pdf download and pdf template

--- a/main_app/templates/main_app/staffs/all_booking.html
+++ b/main_app/templates/main_app/staffs/all_booking.html
@@ -11,7 +11,8 @@ Home
             <div class="card card-primary">
               <div class="card-header">
                 <h3 class="card-title">Appointments</h3>
-              </div><br>
+                <a href="{% url 'generate_pdf' %}" class="btn btn-danger" style="float: right;"><i class="fa fa-file-download"> pdf</i></a>
+              </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive">
                 <table class="table table-bordered table-hover" id="example2">
